fix: Added scrollbar handle and fixed width

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -103,14 +103,16 @@ a {
 }
 
 /* Scrollbar */
-/* width */
 ::-webkit-scrollbar {
-  width: 4px;
+  width: 6px;
 }
 
-/* Track */
 ::-webkit-scrollbar-track {
   /* box-shadow: inset 0 0 5px grey; */
   border-radius: 10px;
   background: var(--grey-border);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--primary-color);
 }
